scss/components/_dialog.scss
@use "../abstracts/mixins" as m;

.dialog {
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  border: none;
  width: 100vw;
  height: 100vh;
  position: fixed;
  overflow: hidden;
  border-radius: var(--size-sm);
  z-index: 99;

  &__content {
    @include m.flex(column, flex-start);
    width: 100%;
    height: 100%;
    padding: var(--size-md);
    padding-block-start: calc(var(--size-lg) + 2rem);
    gap: var(--size-md);
    background: var(--color-neutral-0);
  }

  &__button {
    margin-block-start: auto;
  }
}

@media screen and (min-width: 40rem) {
  .dialog {
    transform: translate(-50%, -50%);
    width: auto;
    height: auto;

    &__content {
      padding-block-start: 0;
      max-width: 45ch;
    }
  }
  .dialog::backdrop {
    background: var(--color-neutral-3);
  }
}

